# photo-classifier

./: .coveragerc  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: dev_commands.md  index.md  reference.md
photo_classifier/: cli.py  command.py  main.py  utils.py
tests/: photo_classifier_test.py  test_photo_classifier.py  utils_test.py
