[tool.poetry]
name = "photo_classifier"
version = "0.0.1"
description = "Extract data from your photos and show photos on map where taken"
authors = ["Damian Ziobro <damian@xmementoit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkautodoc = "^0.2.0"
mkdocs-material = "^9.0.12"
mkdocs-swagger-ui-tag = "^0.5.2"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
photo-classifier = "photo_classifier.main:main"
